--- a/committee.tex
+++ b/committee.tex
@@ -97,6 +97,29 @@ Now I have introduced the concepts internal and external element and their bases
 In the comparison, I rely on containment, just as I did in Chapter \ref{ch:decomposition} when comparing cases. I went with the following reasoning. A more complex case wins over a less complex case because the former contains all features that the latter contains. Concretely, the dative wins over the accusative because the dative contains all features that the accusative contains, the dative wins over the nominative because the dative contains all features that the nominative contains, and the accusative wins over the nominative because the accusative contains all features that the nominative contains.
 I apply the same reasoning in comparing the internal and external base. When the internal base contains the features that the external base contains, the internal element is allowed to surface. When the external base contains the features that the internal base contains, the external element is allowed to surface.
 
+I illustrate this proposal by showing how this plays out in three different languages.
+In Old High German, the internal base contains the external base, and the external base contains the internal base. Therefore, Old High German allows for matching cases, it allows the internal to win, and it allows the external to win.
+In Modern German, the internal base contains the external base, but the external base does not contain the internal base. Therefore, Modern German allows for matching cases, and it allows the internal to win.
+In Polish, the internal base does not contain the external base, and the external base does not contain the internal base. Therefore, Polish only allows for matching cases.
+
+\begin{table}[H]
+  \center
+  \caption{Overview of languages}
+\begin{tabular}{cccc}
+  \toprule
+                & \tsc{int} = \tsc{ext} & \tsc{int} > \tsc{ext} & \tsc{int} < \tsc{ext} \\
+                      \cmidrule{1-4}
+Old High German & ✔                     & ✔                     & ✔                   \\
+Modern German   & ✔                     & ✔                     & *                   \\
+Polish          & ✔                     & *                     & *                   \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+
+
+
+
 Consider Old High German. First there is a tie, \tsc{int} = \tsc{ext}, and everything is grammatical.
 If \tsc{int} > \tsc{ext}, we have a competition and a winner: internal \tsc{acc}. The bases are compared. (How to get from forms to features?) They are identical, so the internal base contains all features the external base contains.
 If \tsc{int} > \tsc{ext}, we have a competition and a winner: external \tsc{acc}. The bases are compared. They are identical, so the external base contains all features the internal base contains.
@@ -104,15 +127,38 @@ If \tsc{int} > \tsc{ext}, we have a competition and a winner: external \tsc{acc}
 \begin{table}[H]
   \center
   \caption{Base comparison in Old High German}
-\begin{tabular}{ccccc}
+\begin{tabular}{ccccccc}
   \toprule
-                      & \multicolumn{2}{c}{\tsc{int} element}  & \multicolumn{2}{c}{\tsc{ext} element} \\
-                        \cmidrule(lr){2-3}                        \cmidrule(lr){4-5}
-                      & base\scsub{int} & case\scsub{int}       & base\scsub{ext} & case\scsub{ext}     \\
-                        \cmidrule(lr){2-2}    \cmidrule(lr){3-3}  \cmidrule(lr){4-4} \cmidrule(lr){5-5}
-\tsc{int} = \tsc{ext} & dhe & r                                 & dhe & r                               \\
-\tsc{int} > \tsc{ext} & dhe & n                                 & dhe & r                               \\
-\tsc{int} < \tsc{ext} & dhe & r                                 & dhe & n                               \\
+                      & \multicolumn{2}{c}{\tsc{int} element}  & \multicolumn{2}{c}{\tsc{ext} element}  & \multicolumn{2}{c}{\tsc{rel} pronoun} \\
+                        \cmidrule(lr){2-3}                        \cmidrule(lr){4-5}                      \cmidrule(lr){6-7}
+                      & base\scsub{int} & case\scsub{int}       & base\scsub{ext} & case\scsub{ext}     & base\scsub{rel} & case\scsub{rel} \\
+                        \cmidrule(lr){2-2}    \cmidrule(lr){3-3}  \cmidrule(lr){4-4} \cmidrule(lr){5-5}   \cmidrule(lr){6-6} \cmidrule(lr){7-7}
+\tsc{int} = \tsc{ext} & dhe & r                                 & dhe & r                               & dhe & r                           \\
+\tsc{int} > \tsc{ext} & dhe & n                                 & dhe & r                               & dhe & n                           \\
+\tsc{int} < \tsc{ext} & dhe & r                                 & dhe & n                               & dhe & n                           \\
+\bottomrule
+\end{tabular}
+\label{tbl:component-dhen}
+\end{table}
+
+The first row shows the situation in which internal case matches the internal case (\tsc{int} = \tsc{ext}). The relative pronoun surfaces in the 
+
+The second row shows the situation in which internal case is more complex than the external case (\tsc{int} > \tsc{ext}). The internal case part, which corresponds to the accusative \tit{n} morpheme, contains the external case part, which corresponds to the nominative \tit{r} morpheme. The internal base part, the features that corresponds to the morpheme \tit{we}, contains the external base part, because there are no external base features. The element that surfaces is the internal element with the internal base and the internal case.
+
+The third row shows the situation in which external case is more complex than the internal case (\tsc{int} < \tsc{ext}). The external case part, which corresponds to the accusative \tit{n} morpheme, contains the internal case part, which corresponds to the nominative \tit{r} morpheme. The external base part, which does not contain any features, does not contain the internal case part, the features that corresponds to the morpheme \tit{we}. The winner of the case competition is the external case, but the external base does not contain the internal base, so there is no grammatical relative pronoun.
+
+\begin{table}[H]
+  \center
+  \caption{Base comparison in Modern German}
+\begin{tabular}{ccccccc}
+  \toprule
+                      & \multicolumn{2}{c}{\tsc{int} element}  & \multicolumn{2}{c}{\tsc{ext} element}  & \multicolumn{2}{c}{\tsc{rel} pronoun} \\
+                        \cmidrule(lr){2-3}                        \cmidrule(lr){4-5}                      \cmidrule(lr){6-7}
+                      & base\scsub{int} & case\scsub{int}       & base\scsub{ext} & case\scsub{ext}     & base\scsub{rel} & case\scsub{rel} \\
+                        \cmidrule(lr){2-2}    \cmidrule(lr){3-3}  \cmidrule(lr){4-4} \cmidrule(lr){5-5}   \cmidrule(lr){6-6} \cmidrule(lr){7-7}
+\tsc{int} = \tsc{ext} & we & r                                  &  & r                                  & we & r                           \\
+\tsc{int} > \tsc{ext} & we & n                                  &  & r                                  & we & n                           \\
+\tsc{int} < \tsc{ext} & we & r                                  &  & n                                  & \multicolumn{2}{c}{\tsc{*}}      \\
 \bottomrule
 \end{tabular}
 \label{tbl:component-dhen}
@@ -122,76 +168,27 @@ If \tsc{int} > \tsc{ext}, we have a competition and a winner: external \tsc{acc}
 
 \begin{table}[H]
   \center
-  \caption{Modern German}
-\begin{tabular}{c|ccc}
+  \caption{Base comparison in Polish}
+\begin{tabular}{ccccccc}
   \toprule
-                      & \tsc{int}         & \tsc{ext} & ✔/* \\
-                      \cmidrule{1-4}
-\tsc{int} = \tsc{ext} & \tbf{w}-\tbf{e}-r & r         & ✔   \\
-\tsc{int} > \tsc{ext} & \tbf{w}-\tbf{e}-n & r         & ✔   \\
-\tsc{int} < \tsc{ext} & \tbf{w}-\tbf{e}-r & n         & *   \\
+                      & \multicolumn{2}{c}{\tsc{int} element}  & \multicolumn{2}{c}{\tsc{ext} element}  & \multicolumn{2}{c}{\tsc{rel} pronoun} \\
+                        \cmidrule(lr){2-3}                        \cmidrule(lr){4-5}                      \cmidrule(lr){6-7}
+                      & base\scsub{int} & case\scsub{int}       & base\scsub{ext} & case\scsub{ext}     & base\scsub{rel} & case\scsub{rel} \\
+                        \cmidrule(lr){2-2}    \cmidrule(lr){3-3}  \cmidrule(lr){4-4} \cmidrule(lr){5-5}   \cmidrule(lr){6-6} \cmidrule(lr){7-7}
+\tsc{int} = \tsc{ext} & ko & go                                  & te & go                              & ko & go                           \\
+\tsc{int} > \tsc{ext} & ko & mu                                  & te & go                              & \multicolumn{2}{c}{\tsc{*}}       \\
+\tsc{int} < \tsc{ext} & ko & go                                  & te & mu                              & \multicolumn{2}{c}{\tsc{*}}       \\
 \bottomrule
 \end{tabular}
+\label{tbl:component-dhen}
 \end{table}
 
+Taking this all together, there are two competitions taking place in headless relatives: case competition and base competition. Case competition determines which case wins and base competition determines whether this case is allowed to surface.
+I put this in the metaphor with the committee that I introduced in Section \ref{sec:possible-patterns}. The committee learns who wins the case competition, and it can either approve this case or not approve it. The information that the committee uses for their decision is the comparison between the internal and the external base. The committee approves the winning case if the base associated with the winning case contains the base associated with the losing case.
 
-\begin{table}[H]
-  \center
-  \caption{Polish}
-\begin{tabular}{c|ccc}
-  \toprule
-                      & \tsc{int}   & \tsc{ext}   & ✔/* \\
-                      \cmidrule{1-4}
-\tsc{int} = \tsc{ext} & \tbf{ko}-go & \tbf{te}-go & ✔   \\
-\tsc{int} > \tsc{ext} & \tbf{ko}-mu & \tbf{te}-go & *   \\
-\tsc{int} < \tsc{ext} & \tbf{ko}-go & \tbf{te}-mo & *   \\
-\bottomrule
-\end{tabular}
-\end{table}
-
-
-Case differs from sentence to sentence: in one sentence the internal case is the dative, in the other it is the accusative or the nominative. The base table is not like that: only a single cell in the table corresponds to a particular language.
-
-Taking this all together, there are two competitions taking place in headless relatives: case competition and base competition. Case competition decides which case wins the sentence and base competition decides whether the result can go through. Let me put this in the metaphor with the committee I introduced in Section \ref{sec:possible-patterns}. The committee learns who wins the case competition. It can either approve this case or not approve it. The information that the committee uses for their decision is the comparison between the internal and the external element. More specifically, it compares the base parts of the internal and external element. The committee approves the winning case if the base part of its element contains the base part of the element of the losing case.
-
-In sum, a relative pronoun can surface in the internal case if both the base and the case part of the internal element contain base and case part of the external element. It works the same way the other way around: a relative pronoun can surface in the external case if both the base and the case part of the external element contain the base and case part of the internal element.
-
-
-
-The linguistic counterpart of `allow \tsc{ext}?' is whether the internal base and the external base are syncretic (base\scsub{int} = base\scsub{ext}?).
-The linguistic counterpart of `allow \tsc{int}?' is whether the external base is a clitic (base\scsub{ext} = clitic?).
-
-\begin{figure}[H]
-  \centering
-    \footnotesize{
-    \begin{tikzpicture}[node distance=1.5cm]
-      \node (question2) [question]
-      {base\scsub{int} = base\scsub{ext}?};
-          \node (outcome2) [outcome, below of=question2, xshift=-1.5cm]
-          {complex};
-              \node (example2) [example, below of=outcome2, yshift=0.25cm]
-              {\scriptsize{e.g. Gothic, Old High German, Classical Greek}};
-          \node (question3) [question, below of=question2, xshift=2cm, yshift=-0.5cm]
-          {base\scsub{ext} = clitic?};
-              \node (outcome3) [outcome, below of=question3, xshift=-1.5cm]
-              {\ac{int} + complex};
-                  \node (example3) [example, below of=outcome3, yshift=0.25cm]
-                  {\scriptsize{e.g. Modern German\\\phantom{x}}};
-              \node (outcome4) [outcome, below of=question3, xshift=1.5cm]
-              {matching};
-                  \node (example4) [example, below of=outcome4, yshift=0.25cm]
-                  {\scriptsize{e.g. Polish\\\phantom{x}}};
-
-    \draw [arrow] (question2) -- node[anchor=east] {yes} (outcome2);
-    \draw [arrow] (question2) -- node[anchor=west] {no} (question3);
-    \draw [arrow] (question3) -- node[anchor=east] {no} (outcome3);
-    \draw [arrow] (question3) -- node[anchor=west] {yes} (outcome4);
-    \end{tikzpicture}
-    }
-    \caption{Two theoretical parameters generate three language types}
-    \label{fig:formal-parameters}
-\end{figure}
-
+In sum, a relative pronoun can surface in the internal case if the internal case and base contains the external case and base.
+It works the same the other way around: a relative pronoun can surface in the external case if the external case and base contain the internal case and base.
+Notice that there is a crucial difference between comparing the cases and comparing the bases. The internal and external case can differ from sentence to sentence. The internal and external base remain stable throughout the language.
 
 
 
@@ -1035,13 +1032,46 @@ German & \tsc{dem}\scsub{strong}  & \cellcolor{LG}\tsc{dem}\scsub{weak} & \cellc
 \tit{to} is incompatible with \tit{ever}, because \tit{to} makes it accidentally uniqueness and \tit{ever} requires inherent uniqueness
 
 
-\subsection{Excluding `non-matching --- external-only'}
+\section{Excluding `non-matching --- external-only'}
 
 
 
 
+\section{Summary}
 
+The linguistic counterpart of `allow \tsc{ext}?' is whether the internal base and the external base are syncretic (base\scsub{int} = base\scsub{ext}?).
+The linguistic counterpart of `allow \tsc{int}?' is whether the external base is a clitic (base\scsub{ext} = clitic?).
 
+\begin{figure}[H]
+  \centering
+    \footnotesize{
+    \begin{tikzpicture}[node distance=1.5cm]
+      \node (question2) [question]
+      {base\scsub{int} = base\scsub{ext}?};
+          \node (outcome2) [outcome, below of=question2, xshift=-1.5cm]
+          {complex};
+              \node (example2) [example, below of=outcome2, yshift=0.25cm]
+              {\scriptsize{e.g. Gothic, Old High German, Classical Greek}};
+          \node (question3) [question, below of=question2, xshift=2cm, yshift=-0.5cm]
+          {base\scsub{ext} = clitic?};
+              \node (outcome3) [outcome, below of=question3, xshift=-1.5cm]
+              {\ac{int} + complex};
+                  \node (example3) [example, below of=outcome3, yshift=0.25cm]
+                  {\scriptsize{e.g. Modern German\\\phantom{x}}};
+              \node (outcome4) [outcome, below of=question3, xshift=1.5cm]
+              {matching};
+                  \node (example4) [example, below of=outcome4, yshift=0.25cm]
+                  {\scriptsize{e.g. Polish\\\phantom{x}}};
+
+    \draw [arrow] (question2) -- node[anchor=east] {yes} (outcome2);
+    \draw [arrow] (question2) -- node[anchor=west] {no} (question3);
+    \draw [arrow] (question3) -- node[anchor=east] {no} (outcome3);
+    \draw [arrow] (question3) -- node[anchor=west] {yes} (outcome4);
+    \end{tikzpicture}
+    }
+    \caption{Two theoretical parameters generate three language types}
+    \label{fig:formal-parameters}
+\end{figure}
 
 
 
